--- a/_config.yml
+++ b/_config.yml
@@ -1,60 +1,47 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
-description: > # this means to ignore newlines until "show_exerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-show_excerpts: true # set to true to show excerpts on the homepage
+title: Luning Lin | Homepage  
+author: Luning Lin
+email: luninglin@zju.edu.cn
+description: 
+  Personal homepage of Luning Lin, a Ph.D. student at the College of Information and Electronic Engineering, Zhejiang University. 
+  My research focuses on Array Signal Processing, Integrated Sensing and Communication (ISAC), and Wireless Communication.
 
-# Minima date format
-# refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
-sass:
-  sass_dir: _sass
 plainwhite:
-  name: Adam Denisov
-  tagline: Developer. Designer
-  date_format: "%b %-d, %Y"
-  sitemap: true # set to true to generate sitemap.xml content
-  search: true # set to true to enable searchbar
-  dark_mode: true # set to true to add dark mode toggle
-  portfolio_image: "assets/portfolio.png" # the path from the base directory of the site to the image to display (no / at the start)
-  html_lang: "en" # set the lang attribute of the <html> tag for the pages. See here for a list of codes: https://www.w3schools.com/tags/ref_country_codes.asp
-  condensed_mobile:
-    #- home
-    - page
-    - post
-  # generate social links in footer
+  name: Luning Lin (林鹿宁)
+  tagline: Ph.D. Student in Electronic Science Technology
+  date_format: "%b %-d, %Y" # 日期格式
+
+  sitemap: true 
+  search: true 
+  dark_mode: true 
+  
+  # 头像设置
+  # 重要提示：请将你的头像照片命名为 profile.jpg 并上传到网站的 assets/img/ 目录下
+  avatar: "assets/img/profile.jpg" 
+
+  # 社交媒体与学术链接
   social_links:
-    twitter: samarsault
-    github:  samarsault
-    linkedIn: in/samarsault
-    #dribbble: jekyll
-    #flickr:   jekyll
-    #instagram: jekyll
-    #pinterest: jekyll
-    #youtube: jekyll
-    #facebook: jekyll
-    #soundcloud: jekyll
-    #telegram: jekyll
-    #gitlab: jekyll
-    #email: jekyll
+    # 填写你的GitHub用户名替换 "your-github-username"
+    # github: your-github-username 
+    # 填写你的LinkedIn个人主页ID替换 "your-linkedin-profile"
+    # linkedin: in/your-linkedin-profile 
+    # 学术主页，强烈建议创建并链接
+    google_scholar: "https://scholar.google.com/citations?user=POUuJlIAAAAJ&hl=zh-CN"
+    email: luninglin@zju.edu.cn # 页脚的邮件链接
 
-    # Mastodon instances
-    # mastodon:
-    # - username: jekyll
-    #   instance: example.com
-    # - username: jekyll2
-    #   instance: example.com
-
-# If you want to link only specific pages in your header, uncomment
-# this and add the path to the pages in order as they should show up
-#header_pages:
-# - about.md
+  # 导航栏设置
+  # 这里定义了你网站顶部的导航链接
+  navigation:
+    - title: Home
+      url: "/"
+    - title: Publications
+      url: "/publications"
+    - title: Projects
+      url: "/projects"
+    - title: CV
+      url: "/cv"
 
 # Build settings
 theme: plainwhite
 
 plugins:
   - jekyll-seo-tag
-#  - jekyll-feed
