--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ plainwhite:
       url: "/cv"
 
 # Build settings
-theme: plainwhite
+theme: jekyll-plainwhite-theme
 
 plugins:
   - jekyll-seo-tag
